# easy-barcode

./: .gitignore  README.md  easy-barcode_win.spec  pyproject.toml
dev/: genconfigs.py
easy_barcode/: eenum.py  main.py  res.py  utils.py
easy_barcode/application/: _barcode_actions.py  _common_actions.py  _constants.py  _main.py  _qrcode_actions.py  app.py  barcode_actions.py  common_actions.py  utils.py
easy_barcode/barcode/: configs.py  encoder.py
easy_barcode/barcode_1d/: __init__.py  _constants.py  configs.py  encoder.py
easy_barcode/barcode_encoder/: __init__.py  _configs.py  _constants.py  encoder.py
easy_barcode/base_encoder/: _constants.py  configs.py  encoder.py  overwrite_behavior.py
easy_barcode/common/: _constants.py  configs.py  encoder.py  overwrite_behavior.py
easy_barcode/qrcode_2d/: __init__.py  _constants.py  configs.py  encoder.py  module_drawer.py
easy_barcode/qrcode_encoder/: __init__.py  _color_mask.py  _configs.py  _constants.py  encoder.py
easy_barcode/res/: barcode_doc.html  qrcode_doc.html
